kubernetes/apps/development/coder/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.bykaj.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app coder
spec:
  hostnames: ["${APP_DOMAIN:=${APP_SUBDOMAIN:=${APP}}.bykaj.app}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: *app
          port: 80
# 20250817: Disabled wildcard route, waiting for external-dns support (>0.18.1?) for wildcard CNAMEs
# Ref: https://github.com/kubernetes-sigs/external-dns/issues/5635
# Workaround: use LoadBalancer service with annotations
# ---
# # yaml-language-server: $schema=https://schemas.bykaj.io/gateway.networking.k8s.io/httproute_v1.json
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: coder-wildcard
# spec:
#   hostnames:
#     - "*.coder.bykaj.dev"
#   parentRefs:
#     - name: envoy-internal
#       namespace: network
#   rules:
#     - backendRefs:
#         - name: coder
#           port: 80
